基本数据操作

--- a/templates/user_management_html/online_user.html
+++ b/templates/user_management_html/online_user.html
@@ -38,196 +38,15 @@
                     <th class="center">操作</th>
 
                 <tbody>
-                {% for user, role_list in user_role_dict.items %}
+                {% for user in online_users %}
                     <tr>
                         <td style="width: 70px"><input type="checkbox" class='choice_item' name='select_pk' id="choice"
-                                                       value='{{ staff.pk }}'></td>
+                                                       value='{{ user.pk }}'></td>
                         <td style="width: 50px">{{ forloop.counter }}</td>
-                        <td style="width: 80px">{{ user.user.username }}</td>
-                        <td style="width: 80px">{{ user.user_name }}</td>
+                        <td style="width: 80px">{{ user.username }}</td>
+                        <td style="width: 80px">{{ user }}</td>
                         <!-- 操作界面 -->
-                        <td style="width: 150px">
-                            <!-- 详情信息start0 -->
-                            <a class="btn btn-xs btn-info" onclick="searchs();" title="检索" data-toggle="modal"
-                               data-target="#xqmyModal{{ forloop.counter }}">
-                                <i id="nav-search-icon"
-                                   class="ace-icon fa fa-search bigger-110 nav-search-icon blue"></i>
-                            </a>
-                            <div class="modal fade" id="xqmyModal{{ forloop.counter }}" tabindex="-1"
-                                 role="dialog"
-                                 aria-labelledby="myModalLabel">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
 
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal"
-                                                    aria-label="Close"><span aria-hidden="true"></span>
-                                            </button>
-                                        </div>
-
-                                        <div class="modal-body">
-
-                                            <!-- 查看员工start-->
-                                            <div align="center">
-                                                <p class="btn btn-default" style="width: 200px;height: 40px">
-                                                    {{ user.user.username }}&nbsp用&nbsp户 &nbsp的&nbsp详&nbsp细&nbsp信&nbsp
-                                                    息</p>
-                                            </div>
-                                            <hr/>
-
-
-                                            <div class="col-md-offset-1">
-
-
-                                                {% csrf_token %}
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="用户名：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{ user.user.username }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="姓名：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{ user.user_name }}"
-                                                           readonly>
-                                                </div>
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="编号：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_number }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="年限：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_stay_years }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="手机号：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_phone }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="年龄：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_age }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="身份ID：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_id_card }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="备注：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_remarks }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="地址：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_address }}"
-                                                           readonly>
-                                                </div>
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="性别：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user_gender }}"
-                                                           readonly>
-                                                </div>
-
-                                                <div class="form-group">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="邮箱：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user.email }}"
-                                                           readonly>
-                                                </div>
-
-
-                                                <div class="form-group">
-
-
-                                                    {% for role in   user.user.role_set.all %}
-                                                        <input class="form-control" type="text"
-                                                               placeholder="角色：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ role.title }}"
-                                                               readonly>
-
-                                                    {% endfor %}
-
-
-                                                </div>
-                                                <hr/>
-                                                <div class="modal-footer">
-
-                                                    <a href="/user_management/user_info/"
-                                                       class="btn btn-danger">退出</a>
-
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-                                        <!--查看员工end -->
-
-
-                                    </div>
-
-
-                                </div>
-                            </div>
-                            <!-- 详情信息 end0 -->
-                            <a class="btn btn-xs btn-info" title="发送站内信">
-                                <i class="ace-icon fa fa-envelope-o bigger-120" title="发送站内信"></i>
-                            </a>
-                            <!-- 下线模态框start-->
-                            <a class="btn btn-xs btn-danger" title="删除" data-toggle="modal"
-                               data-target="#myModal{{ forloop.counter }}">
-                                <i class="ace-icon fa fa-trash-o bigger-120" title="删除"></i>
-                            </a>
-                            <div class="modal fade" id="myModal{{ forloop.counter }}" tabindex="-1" role="dialog"
-                                 aria-labelledby="myModalLabel">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal"
-                                                    aria-label="Close"><span aria-hidden="true">&times;</span>
-                                            </button>
-                                            <h4 class="modal-title">您是否决定删除
-                                                <hr/>
-                                                <h3>{{ user.user.username }}</h3>
-                                                <hr/>
-
-                                                用户的相关信息
-                                            </h4>
-
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>信息一旦删除将无法修复&hellip;!!!</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">
-                                                我再想想
-                                            </button>
-                                            <a href="/user_management/delete_user/{{ user.pk }}/"
-                                               class="btn btn-danger">确定删除</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- 下线模态框end-->
-                            <!-- 操作界面 -->
-                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
