--- a/menu_management/templates/first_menu_manage.html
+++ b/menu_management/templates/first_menu_manage.html
@@ -30,7 +30,7 @@
 
                 </td>
                 <td>
-                    {% include 'tags_html/edit_tag.html' %}
+                    {% include 'tags_html/edit_first_tag.html' %}
                     {% include 'tags_html/del_first_tag.html' %}
                 </td>
             </tr>
@@ -38,7 +38,7 @@
         </tbody>
     </table>
     <div>
-        {% include 'tags_html/add_tag.html' %}
+        {% include 'tags_html/add_first_tag.html' %}
     </div>
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/csrfajax.js"></script>
