--- a/menu_management/templates/tags_html/edit_second_tag.html
+++ b/menu_management/templates/tags_html/edit_second_tag.html
@@ -14,17 +14,21 @@
                         <div class="form-group">
                             <label for="inputPassword2" class="col-sm-3 control-label">请输入菜单名称</label>
                             <div class="col-sm-9">
-                                <input type="text" id="edit_menuname" class="form-control" name="menu_name"
+                                <input menuid="{{ i.nid }}" type="text" id="edit_second_menuname" class="form-control edit_second_menuname" name="menu_name"
                                        value="{{ i.title }}"
                                        placeholder="请输入菜单名称">
+                                <p style="color: red; display: none;text-align: center" id="edit_second_prompt{{ i.nid }}">该菜单名已经存在</p>
                             </div>
+
                         </div>
                         <div class="form-group">
                             <label for="menu_path" class="col-sm-3 control-label">请输入菜单路径</label>
                             <div class="col-sm-9">
-                                <input type="text" id="menu_path" class="form-control" name="menu_path"
+                                <input menuid="{{ i.nid }}" type="text" id="menu_path" class="form-control edit_second_menupath" name="menu_path"
                                        value="{{ i.url }}"
                                        placeholder="请输入菜单路径">
+                                <p style="color: red; display: none;text-align: center" id="second_edit_path_prompt{{ i.nid }}">
+                                路径已存在</p>
                             </div>
                         </div>
                         <div class="form-group">
@@ -52,10 +56,65 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                        <button type="submit" class="btn btn-primary">保存</button>
+                        <button type="submit" class="btn btn-primary" id="edit_second_sbtn{{ i.nid }}">保存</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
+<script src="/static/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript">
+    {#$('body').delegate('.edit_second_menuname', 'blur', function () {#}
+    {#    var menu_name=$(this).val();#}
+    {#    var menu_id=$(this).attr('menuid');#}
+    {#    $.ajax({#}
+    {#        url:'/menu/edit/second/0/',#}
+    {#        type:'get',#}
+    {#        data:{#}
+    {#            'menu_name':menu_name,#}
+    {#            'menu_id':menu_id#}
+    {#        },#}
+    {#        success:function (data) {#}
+    {#            console.log(data.id);#}
+    {#            var edit_id='#edit_second_prompt'+data.id;#}
+    {#            var submit_btn='#edit_second_sbtn'+data.id;#}
+    {#            if (data.span == '1') {#}
+    {#                $(edit_id).css('display','block');#}
+    {#                $(submit_btn).attr('disabled','disabled')#}
+    {#            }#}
+    {#            else#}
+    {#            {#}
+    {#                $(edit_id).css('display','none');#}
+    {#                $(submit_btn).removeAttr('disabled')#}
+    {#            }#}
+    {#        }#}
+    {#    });#}
+    {# });#}
+    {#$('body').delegate('.edit_second_menupath', 'blur', function () {#}
+    {#    var menu_path=$(this).val();#}
+    {#    var menu_id=$(this).attr('menuid');#}
+    {#    $.ajax({#}
+    {#        url:'/menu/edit/second/0/',#}
+    {#        type:'get',#}
+    {#        data:{#}
+    {#            'menu_path':menu_path,#}
+    {#            'menu_id':menu_id#}
+    {#        },#}
+    {#        success:function (data) {#}
+    {#            console.log(data.id);#}
+    {#            var edit_id='#second_edit_path_prompt'+data.id;#}
+    {#            var submit_btn='#edit_second_sbtn'+data.id;#}
+    {#            if (data.span == '2') {#}
+    {#                $(edit_id).css('display','block');#}
+    {#                $(submit_btn).attr('disabled','disabled')#}
+    {#            }#}
+    {#            if (data.id == '3')#}
+    {#            {#}
+    {#                $(edit_id).css('display','none');#}
+    {#                $(submit_btn).removeAttr('disabled')#}
+    {#            }#}
+    {#        }#}
+    {#    });#}
+    {# })#}
+</script>
