--- a/menu_management/templates/tags_html/add_second_tag.html
+++ b/menu_management/templates/tags_html/add_second_tag.html
@@ -20,13 +20,17 @@
                                 <input type="text" id="second_menu_name" class="form-control" name="menu_name"
                                        placeholder="请输入菜单名称">
                             </div>
+                            <p style="color: red; display: none;text-align: center" id="second_prompt">该菜单名已经存在</p>
                         </div>
                         <div class="form-group">
                             <label for="menu_path" class="col-sm-3 control-label">请输入菜单路径</label>
                             <div class="col-sm-9">
                                 <input type="text" id="menu_path" class="form-control" name="menu_path"
                                        placeholder="请输入菜单路径">
+                                <p style="color: red; display: none;text-align: center" id="second_path_prompt">
+                                路径已存在</p>
                             </div>
+
                         </div>
                         <input name="menu_id" value="{{ id }}" style="display: none">
                         <div class="form-group">
@@ -43,7 +47,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                        <button type="submit" class="btn btn-primary">保存</button>
+                        <button id="second_btn" type="submit" class="btn btn-primary">保存</button>
                     </div>
                 </div>
             </form>
@@ -51,3 +55,49 @@
 
     </div>
 </div>
+
+<script src="/static/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript">
+    {#$('body').delegate('#second_menu_name', 'blur', function () {#}
+    {#    var menu_name = $(this).val();#}
+    {#    console.log('nihao');#}
+    {#    $.ajax({#}
+    {#        url: '/menu/add/second/',#}
+    {#        type: 'get',#}
+    {#        data: {#}
+    {#            'menu_name': menu_name#}
+    {#        },#}
+    {#        success: function (data) {#}
+    {#            if (data.span == '1') {#}
+    {#                $('#second_prompt').css('display', 'block');#}
+    {#                $('#second_btn').attr('disabled', 'disabled')#}
+    {#            }#}
+    {#            else {#}
+    {#                $('#second_prompt').css('display', 'none');#}
+    {#                $('#second_btn').removeAttr('disabled')#}
+    {#            }#}
+    {#        }#}
+    {#    });#}
+    {# });#}
+    {#$('body').delegate('#menu_path', 'blur', function () {#}
+    {#    var menu_path=$(this).val();#}
+    {#    $.ajax({#}
+    {#        url:'/menu/add/second/',#}
+    {#        type:'get',#}
+    {#        data:{#}
+    {#            'menu_path':menu_path#}
+    {#        },#}
+    {#        success:function (data) {#}
+    {#            if (data.span == '2') {#}
+    {#                $('#second_path_prompt').css('display','block');#}
+    {#                $('#second_btn').attr('disabled','disabled')#}
+    {#            }#}
+    {#            if (data.span == '3')#}
+    {#            {#}
+    {#                $('#second_path_prompt').css('display','none');#}
+    {#                $('#second_btn').removeAttr('disabled')#}
+    {#            }#}
+    {#        }#}
+    {#    });#}
+    {#  })#}
+</script>
