--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,6 @@
                             </div>
                         </a>
                     </li>
-
                 </ul>
                 <!-- /.dropdown-tasks -->
             </li>
@@ -206,7 +205,8 @@
 <script src="/static/assets/js/easypiechart-data.js"></script>
 
 <script src="/static/assets/js/Lightweight-Chart/jquery.chart.js"></script>
-
+{#菜单管理的js文件#}
+<script src="/static/js/menu_management.js"></script>
 <!-- Custom Js -->
 <script src="/static/assets/js/custom-scripts.js"></script>
 <script type="text/javascript">
