修改了若干bug

--- a/templates/login.html
+++ b/templates/login.html
@@ -215,6 +215,7 @@
                                                 <button type="button" id="reSend"
                                                         class="width-35 pull-left btn btn-sm btn-info">
                                                     <span class="bigger-110">重新发送</span>
+                                                    <span id="findBy_email" style="display: none">{{ request.session.findBy_email }}</span>
                                                 </button>
                                                 <button type="button" id="check_code"
                                                         class="width-35 pull-right btn btn-sm btn-info">
