--- a/templates/base.html
+++ b/templates/base.html
@@ -20,23 +20,12 @@
     <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
     <script src="/static/js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
-        $(window).unload(function () {
-            console.log("bye")
-            $.ajax({
-                type: 'get',
-                url: '#',
-                data: {
-                    'online_status': 'offline'
-                }
-            });
-        });
         $(document).ready(function () {
-            console.log("hello")
             $.ajax({
                 type: 'get',
-                url: '#',
-                data: {
-                    'online_status': 'online'
+                url: '/user_management/online_users_count/',
+                success: function(data){
+                    $("#online_users_count").val("在线人数：" + data.online_requests_count)
                 }
             });
         });
@@ -68,7 +57,7 @@
             <li>
                 <a href="/user_management/online_users/">
                     <i class="fa fa-users"></i>
-                    <span>在线人数：{{ online_users_count }}</span>
+                    <span id="online_users_count">在线人数：{{ online_requests_count }}</span>
                 </a>
             </li>
             <li class="dropdown">
