--- a/templates/xadmin/list_view.html
+++ b/templates/xadmin/list_view.html
@@ -4,7 +4,7 @@
     <script src="/static/js/check_box.js"></script>
     <script src="/static/js/sweetalert.min.js"></script>
     <div class="pull-right">
-    <a href="/xadmin/"><span>xadmin/</span></a><a href="/xadmin/{{ current_url }}">{{ current_url }}</a>
+        <a href="/xadmin/"><span>xadmin/</span></a><a href="/xadmin/{{ current_url }}">{{ current_url }}</a>
     </div>
     <br/>
     <div align="center">
@@ -64,6 +64,12 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <br/>
+            <nav aria-label="Page navigation">
+                <ul class="pagination" id="page">
+                    {{ page_html|safe }}
+                </ul>
+            </nav>
         </div>
     </div>
     <script>
@@ -117,19 +123,19 @@
             })
                 .then((willDelete) => {
                     if (willDelete) {
-                            $.ajax({
-                                url: "batch_delete/",
-                                type: "post",
-                                traditional: true,
-                                data: {
-                                    "delete_id_list": delete_id_list,
-                                    "csrfmiddlewaretoken": "{{ csrf_token }}"
-                                },
-                                success: function (data) {
-                                    if (data.status)
-                                        window.location.reload()
-                                }
-                            });
+                        $.ajax({
+                            url: "batch_delete/",
+                            type: "post",
+                            traditional: true,
+                            data: {
+                                "delete_id_list": delete_id_list,
+                                "csrfmiddlewaretoken": "{{ csrf_token }}"
+                            },
+                            success: function (data) {
+                                if (data.status)
+                                    window.location.reload()
+                            }
+                        });
                     } else {
                         swal("数据还是安全的！");
                     }
@@ -157,6 +163,7 @@
                 success: function (data) {
                     if (data.status) {
                         $("#data").append(data.html)
+                        $("#page").html("")
                     }
                     else {
                         alert("出现了未知错误！请联系开发者：qwerty")
